--- a/contact.html
+++ b/contact.html
@@ -1,21 +1,11 @@
-<div class="col1">
-    <h1>Discover the Good <br/>Atmosphere of NYUS.</h1>
-    <p></p>
-    <div class="col1-img">
-        <img src="Assets/img4.png" alt="">
-    </div>
-    <h3></h3>
-    <p></p>
-</div>
-<div class="col2">
-    <div class="col2-img">
-        <img src="Assets/img5.png" alt="">
-    </div>
-    <h3></h3>
-    <p></p>
-    <div class="col2-img">
-        <img src="Assets/img6.png" alt="">
-    </div>
-    <h3></h3>
-    <p></p>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>contact</h1>
+</body>
+</html>
